--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -100,6 +100,9 @@ jobs:
       - uses: runs-on/action@v2
       - uses: actions/checkout@v5
 
+      - run: | # avoid cross-device link error
+          rustup component remove clippy || true
+          rm -rf ~/.rustup/toolchains/stable-x86_64-unknown-linux-gnu || true
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
         with:
