ci: add cuda feature to benchmarks

--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -152,10 +152,12 @@ jobs:
         run: |
           ALLOCATOR=${{ inputs.memory_allocator || github.event.inputs.memory_allocator }}
           if [[ ! "${{ inputs.instance_type || github.event.inputs.instance_type }}" =~ ^g ]]; then
-            echo "FEATURE_FLAGS=${FEATURE_FLAGS},nightly-features" >> $GITHUB_ENV
+            FEATURE_FLAGS=${FEATURE_FLAGS},nightly-features
             if [[ "${{ inputs.e2e_bench }}" == "true" ]]; then
-              echo "FEATURE_FLAGS=${FEATURE_FLAGS},evm" >> $GITHUB_ENV
+              FEATURE_FLAGS=${FEATURE_FLAGS},evm
             fi
+          else
+            FEATURE_FLAGS=${FEATURE_FLAGS},cuda
           fi
           echo "FEATURE_FLAGS=$ALLOCATOR,${FEATURE_FLAGS}" >> $GITHUB_ENV
       - name: "Feature flags: aggregation"
