--- a/extensions/sha256/circuit/Cargo.toml
+++ b/extensions/sha256/circuit/Cargo.toml
@@ -16,6 +16,7 @@ openvm-circuit = { workspace = true }
 openvm-instructions = { workspace = true }
 openvm-sha256-transpiler = { workspace = true }
 openvm-rv32im-circuit = { workspace = true }
+openvm-memcpy-circuit = { workspace = true }
 openvm-sha256-air = { workspace = true }
 
 derive-new.workspace = true
