--- a/.github/workflows/extension-tests.cuda.yml
+++ b/.github/workflows/extension-tests.cuda.yml
@@ -103,7 +103,7 @@ jobs:
         run: |
           nvcc --version
           echo "NEXTEST_ENV=CUDA_OPT_LEVEL=1" >> $GITHUB_ENV
-          echo "FEATURE_ARGS=--features=cuda,touchemall" >> $GITHUB_ENV
+          echo "FEATURE_ARGS=--features=cuda" >> $GITHUB_ENV
           echo "CIRCUIT_TEST_FILTER=cuda" >> $GITHUB_ENV
 
       - name: Run extension tests
@@ -120,7 +120,7 @@ jobs:
               # Run circuit tests
               if [ -d "extensions/$ext/circuit" ]; then
                 pushd extensions/$ext/circuit
-                ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.CIRCUIT_TEST_FILTER }} ${{ env.FEATURE_ARGS }} --profile=heavy --no-tests=pass
+                ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.CIRCUIT_TEST_FILTER }} ${{ env.FEATURE_ARGS }} --features=touchemall --profile=heavy --no-tests=pass
                 popd
               fi
 
