chore: update cargo shear metadata

--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -13,6 +13,9 @@ walkdir = "2.5"
 [features]
 cuda = ["dep:openvm-cuda-common"]
 
+[package.metadata.cargo-shear]
+ignored = ["openvm-cuda-common"]
+
 [[bin]]
 name = "generate-clangd"
 path = "generate_clangd/main.rs"
