--- a/extensions/memcpy/circuit/Cargo.toml
+++ b/extensions/memcpy/circuit/Cargo.toml
@@ -22,3 +22,4 @@ derive-new.workspace = true
 derive_more = { workspace = true, features = ["from"] }
 serde.workspace = true
 strum = { workspace = true }
+tracing.workspace = true
