test: example of init with missing declare

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,8 @@ members = [
     "guest-libs/ruint/",
     "guest-libs/sha2/",
     "guest-libs/verify_stark/",
-    "scripts"
+    "scripts",
+    "stephen"
 ]
 exclude = ["crates/sdk/example", "benchmarks/guest/**"]
 resolver = "2"
