chore: set trailing-slash to true

--- a/docs/vocs/docs/vercel.json
+++ b/docs/vocs/docs/vercel.json
@@ -3,7 +3,7 @@
     "buildCommand": "pnpm install --frozen-lockfile && pnpm vercel-build",
     "outputDirectory": "docs/dist",
     "cleanUrls": true,
-    "trailingSlash": false,
+    "trailingSlash": true,
     "headers": [
       {
         "source": "/(.*)",
