--- a/extensions/keccak256/circuit/Cargo.toml
+++ b/extensions/keccak256/circuit/Cargo.toml
@@ -18,6 +18,7 @@ openvm-circuit = { workspace = true }
 openvm-circuit-derive = { workspace = true }
 openvm-instructions = { workspace = true }
 openvm-rv32im-circuit = { workspace = true }
+openvm-memcpy-circuit = { workspace = true }
 openvm-keccak256-transpiler = { workspace = true }
 
 p3-keccak-air = { workspace = true }
