fix: try cleanUrls true

--- a/docs/vocs/docs/vercel.json
+++ b/docs/vocs/docs/vercel.json
@@ -2,7 +2,7 @@
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "buildCommand": "pnpm install --frozen-lockfile && pnpm vercel-build",
     "outputDirectory": "docs/dist",
-    "cleanUrls": false,
+    "cleanUrls": true,
     "trailingSlash": true,
     "headers": [
       {
