feat: add legacy redirect

--- a/docs/vocs/vercel.json
+++ b/docs/vocs/vercel.json
@@ -40,6 +40,16 @@
         "destination": "/specs/openvm/overview",
         "permanent": false
       },
+      {
+        "source": "/openvm",
+        "destination": "/docs/openvm/",
+        "permanent": false
+      },
+      {
+        "source": "/stark-backend",
+        "destination": "/docs/stark-backend/",
+        "permanent": false
+      },
         {
           "source": "/docs",
           "destination": "/docs/openvm/",
