--- a/.github/workflows/guest-lib-tests.cuda.yml
+++ b/.github/workflows/guest-lib-tests.cuda.yml
@@ -139,7 +139,7 @@ jobs:
                   SPECIAL_ARGS="--features=bn254,bls12_381"
                 elif [[ "$crate" == "ruint" ]]; then
                   # only run integration tests because other tests are not OpenVM related
-                  SPECIAL_ARGS="--test '*'"
+                  SPECIAL_ARGS="test_matrix_power"
                 fi
 
                 ${{ env.NEXTEST_ENV }} cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} $SPECIAL_ARGS --no-tests=pass --test-threads=1
