--- a/docs/vocs/vercel.json
+++ b/docs/vocs/vercel.json
@@ -82,6 +82,10 @@
           "destination": "https://openvm-crate-docs-openvm-us-east-1.s3.us-east-1.amazonaws.com/static/index.html"
         },
         {
+          "source": "/docs/openvm/:path*/",
+          "destination": "https://openvm-crate-docs-openvm-us-east-1.s3.us-east-1.amazonaws.com/static/:path*/index.html"
+        }, 
+        {
           "source": "/docs/openvm/:path*",
           "destination": "https://openvm-crate-docs-openvm-us-east-1.s3.us-east-1.amazonaws.com/static/:path*"
         },
@@ -99,6 +103,10 @@
         {
           "source": "/docs/stark-backend/",
           "destination": "https://openvm-crate-docs-stark-backend-us-east-1.s3.us-east-1.amazonaws.com/static/index.html"
+        },
+        {
+          "source": "/docs/stark-backend/:path*/",
+          "destination": "https://openvm-crate-docs-stark-backend-us-east-1.s3.us-east-1.amazonaws.com/static/:path*/index.html"
         },
         {
           "source": "/docs/stark-backend/:path*",
