--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -80,6 +80,8 @@ test-utils = ["dep:openvm-stark-sdk"]
 # Tail call optimizations. This requires nightly for the `become` keyword (https://github.com/rust-lang/rust/pull/144232).
 # However tail call elimination is still an incomplete feature in Rust, so the `tco` feature remains experimental until then.
 tco = ["openvm-circuit-derive/tco"]
+# Disable bounds checking in memory operations for performance
+unprotected = []
 # performance features:
 mimalloc = ["openvm-stark-backend/mimalloc"]
 jemalloc = ["openvm-stark-backend/jemalloc"]
@@ -98,4 +100,3 @@ touchemall = [
     "openvm-cuda-backend/touchemall",
     "openvm-cuda-common/touchemall",
 ]
-unprotected = []
