--- a/.github/workflows/openvm-tags.yml
+++ b/.github/workflows/openvm-tags.yml
@@ -10,6 +10,8 @@ on:
     branches: [main]
     paths:
       - "docs"
+      - ".github/workflows/openvm-tags.yml"
+      - "ci/scripts/check_openvm_tags.sh"
 
 env:
   CARGO_NET_GIT_FETCH_WITH_CLI: true
