--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -123,13 +123,13 @@ cuda = [
 ]
 
 # Legacy compatibility features for backwards compatibility with v1.2/v1.3
-legacy = ["legacy-evm-verifier", "legacy-mem-align"]
+legacy-v1-3 = ["legacy-v1-3-evm-verifier", "legacy-v1-3-mem-align"]
 # Generate EVM verifier compatible with v1.2/v1.3 format
-legacy-evm-verifier = []
+legacy-v1-3-evm-verifier = []
 # Enable unaligned memory access for RISC-V 32-bit instructions (v1.2/v1.3 behavior)
-legacy-mem-align = [
-    "openvm-rv32im-circuit/legacy-mem-align",
-    "openvm-circuit/legacy-mem-align"
+legacy-v1-3-mem-align = [
+    "openvm-rv32im-circuit/legacy-v1-3-mem-align",
+    "openvm-circuit/legacy-v1-3-mem-align"
 ]
 
 [[example]]
