--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ on:
   push:
 
 env:
-  S3_BUCKET: s3://openvm-public-artifacts-us-east-1
+  S3_BUCKET: openvm-public-artifacts-us-east-1
 
 jobs:
   upload-setup:
