--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,6 +6,10 @@ on:
     branches: ["main"]
     tags:
       - v*.*.*
+  pull_request:
+    branches: [main]
+    paths:
+      - ".github/workflows/docs.yml"
   workflow_dispatch:
     inputs:
       tag:
