--- a/.github/workflows/guest-lib-tests.cuda.yml
+++ b/.github/workflows/guest-lib-tests.cuda.yml
@@ -114,7 +114,7 @@ jobs:
       - name: Check CUDA status and set environment variables
         run: |
           nvcc --version
-          echo "NEXTEST_ENV=CUDA_OPT_LEVEL=3" >> $GITHUB_ENV
+          echo "NEXTEST_ENV=CUDA_OPT_LEVEL=3 OPENVM_SKIP_DEBUG=1" >> $GITHUB_ENV
           echo "FEATURE_ARGS=--features=cuda" >> $GITHUB_ENV
 
       - name: Run guest library tests
