--- a/.github/workflows/guest-lib-tests.cuda.yml
+++ b/.github/workflows/guest-lib-tests.cuda.yml
@@ -30,8 +30,8 @@ jobs:
       matrix:
         crates: # group crates on the same runner based on test time
           - { names: "sha2 keccak256 verify_stark" }
-          - { names: "ruint" }
-          - { names: "ff_derive k256 p256 pairing" }
+          - { names: "ruint k256 p256" }
+          - { names: "ff_derive pairing" }
     runs-on:
       - runs-on=${{ github.run_id }}-guest-lib-cuda-${{ github.run_attempt }}-${{ strategy.job-index }}/runner=test-gpu-nvidia/cpu=8+32
 
