--- a/.github/workflows/base-tests.cuda.yml
+++ b/.github/workflows/base-tests.cuda.yml
@@ -22,6 +22,7 @@ concurrency:
 env:
   CARGO_TERM_COLOR: always
   OPENVM_FAST_TEST: "1"
+  OPENVM_SKIP_DEBUG: "1"
 
 jobs:
   tests-cuda:
@@ -58,9 +59,9 @@ jobs:
       - name: Run vm crate tests
         working-directory: crates/vm
         run: |
-          OPENVM_SKIP_DEBUG=1 cargo nextest run ${{ env.NEXTEST_ARGS }}
+          cargo nextest run ${{ env.NEXTEST_ARGS }}
 
       - name: Run recursion crate tests
         working-directory: extensions/native/recursion
         run: |
-          OPENVM_SKIP_DEBUG=1 cargo nextest run --features cuda
+          cargo nextest run --features cuda
