--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -21,6 +21,7 @@ concurrency:
 env:
   CARGO_TERM_COLOR: always
   OPENVM_FAST_TEST: "1"
+  OPENVM_SKIP_DEBUG: "1"
 
 jobs:
   extension-tests:
@@ -74,7 +75,7 @@ jobs:
           if [[ "${{ matrix.extension.name }}" == "algebra" ]]; then
             TEST_THREADS="--test-threads=4"
           fi
-          OPENVM_SKIP_DEBUG=1 cargo nextest run --cargo-profile=fast $TEST_THREADS --no-tests=pass
+          cargo nextest run --cargo-profile=fast $TEST_THREADS --no-tests=pass
 
         # We only need to run guest crate tests on CPU since we are not testing prover functionality
       - name: Run ${{ matrix.extension.name }} guest crate tests
@@ -85,11 +86,11 @@ jobs:
           if [[ "${{ matrix.extension.name }}" == "pairing" ]]; then
             GUEST_FEATURE_ARGS="--features=bn254,bls12_381,halo2curves"
           fi
-          OPENVM_SKIP_DEBUG=1 cargo nextest run --cargo-profile=fast $GUEST_FEATURE_ARGS --no-tests=pass
+          cargo nextest run --cargo-profile=fast $GUEST_FEATURE_ARGS --no-tests=pass
 
       - name: Run ${{ matrix.extension.name }} integration tests
         if: hashFiles(format('extensions/{0}/tests', matrix.extension.path)) != ''
         working-directory: extensions/${{ matrix.extension.path }}/tests
         run: |
           rustup component add rust-src --toolchain nightly-2025-02-14
-          OPENVM_SKIP_DEBUG=1 cargo nextest run --cargo-profile=fast --profile=heavy --no-tests=pass
+          cargo nextest run --cargo-profile=fast --profile=heavy --no-tests=pass
