feat: custom memcmp assembly (#2130)
# Description
<!-- Provide a brief description of the changes in this PR -->

Added a custom assembly `memcmp.s` compiled from glibc's memcmp
implementation with this compilation command

```
clang-14 -target riscv32 -march=rv32im -O2 -fno-builtin -ffreestanding \
  -D"size_t=unsigned" \
  -D"__THROW=" \
  -D"op_t=unsigned long" \
  -D"OPSIZ=4" \
  -D"OP_T_THRES=16" \
  -D"libc_hidden_builtin_def(x)=" \
  -D"libc_hidden_def(x)=" \
  -D"strong_alias(x,y)=" \
  -D"weak_alias(x,y)=" \
  -D"__BYTE_ORDER=1234" \
  -D"__LITTLE_ENDIAN=1234" \
  -S glibc_memcmp_no_includes.c -o src/memcmp.s
  ```

Then in `src/memcmp.s`
- Replace `"rv32i2p0_m2p0"` to `rv32im`
- Replace all `.LBB0_X` instances and replace to `.LBBmemcmp0_X`
- Replace `.Lfunc_end0` to `.Lmemcmpfunc_end0` 
- Replace `.Lfunc_end0-memcmp` to `.Lmemcmpfunc_end0-memcmp`

Then linked to rust toolchain adding  
```
#[cfg(target_os = "zkvm")]
core::arch::global_asm!(include_str!("memcmp.s"));
```
in `crates/toolchain/openvm/src/lib.rs`

Added `slice_comparison` benchmark:
- Calls the custom assembly `memcmp`  and performs slice comparison

## How Has This Been Tested?

**Test Configuration:**
- [x] Unit tests pass
- [x] Integration tests pass
- [x] Manual testing completed

## Testing Details:

Evidence that memcmp was linked properly (i.e. we are not using the default anymore):
- The reduction in number of instructions count in the openvm-reth-benchmark
- Removing the linker in `crates/toolchain/openvm/src/lib.rs` then re-running the local benchmark below also show change in number of instruction count
- Temporarily change the `memcmp.s` assembly to return some constant number regardless of input then checking on a guest program if it always returns this same constant number

Then I ran checks to ensure memcmp works correctly by asserting the expected result of a correct memcmp.
Tests I ran have been added to the integration tests in `extensions/rv32im/tests/programs/examples/mem

--- a/benchmarks/guest/Cargo.toml
+++ b/benchmarks/guest/Cargo.toml
@@ -3,7 +3,7 @@ version = "0.0.0"
 edition = "2021"
 
 [workspace]
-members = ["base64_json", "bincode", "bubblesort", "ecrecover", "factorial_iterative_u256", "fibonacci", "fibonacci_iterative", "fibonacci_recursive", "keccak256", "keccak256_iter", "kitchen-sink", "pairing", "quicksort", "regex", "revm_snailtracer", "revm_transfer", "rkyv", "sha256", "sha256_iter"]
+members = ["base64_json", "bincode", "bubblesort", "ecrecover", "factorial_iterative_u256", "fibonacci", "fibonacci_iterative", "fibonacci_recursive", "keccak256", "keccak256_iter", "kitchen-sink", "pairing", "quicksort", "regex", "revm_snailtracer", "revm_transfer", "rkyv", "sha256", "sha256_iter", "slice_comparison"]
 resolver = "2"
 
 [workspace.dependencies]
