chore: execution runs without runtime errors; failing at verification stages

--- a/benchmarks/guest/fibonacci/Cargo.toml
+++ b/benchmarks/guest/fibonacci/Cargo.toml
@@ -7,4 +7,5 @@ edition.workspace = true
 openvm = { workspace = true, features = ["std"] }
 
 [features]
-default = []
+default = ["custom-memcpy"]
+custom-memcpy = []
