--- a/extensions/memcpy/tests/Cargo.toml
+++ b/extensions/memcpy/tests/Cargo.toml
@@ -24,5 +24,6 @@ test-case.workspace = true
 tracing.workspace = true
 
 [features]
-default = ["parallel"]
+default = ["parallel", "custom-memcpy"]
 parallel = ["openvm-circuit/parallel"]
+custom-memcpy = []
