--- a/.github/workflows/riscv.yml
+++ b/.github/workflows/riscv.yml
@@ -56,6 +56,7 @@ jobs:
           nvcc --version
           echo "FEATURE_ARGS=--features=cuda,touchemall" >> $GITHUB_ENV
           echo "VPMM_PAGES=1" >> $GITHUB_ENV
+          echo "CUDA_DEBUG=1" >> $GITHUB_ENV
 
       - name: Download and install risc64-elf-gcc
         if: contains(matrix.platform.image, 'x64')
