--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -40,6 +40,7 @@ static_assertions.workspace = true
 getset.workspace = true
 dashmap.workspace = true
 cfg-if.workspace = true
+libloading = "0.8"
 
 [build-dependencies]
 openvm-cuda-builder = { workspace = true, optional = true }
